--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -100,7 +100,7 @@
                 android:id="@+id/btn_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="User"
+                android:text="@string/user"
                 android:textSize="@dimen/x14"
                 android:textColor="@color/text_black_color"
                 android:layout_marginEnd="@dimen/x5"/>
@@ -112,7 +112,7 @@
                 android:layout_marginStart="@dimen/x5"
                 android:textSize="@dimen/x14"
                 android:textColor="@color/text_black_color"
-                android:text="Technician"/>
+                android:text="@string/service_provider"/>
 
         </RadioGroup>
 
