--- a/app/src/main/res/layout/row_item_post.xml
+++ b/app/src/main/res/layout/row_item_post.xml
@@ -8,9 +8,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/x15"
-        android:layout_marginStart="@dimen/x15"
         android:layout_marginEnd="@dimen/x15"
+        android:layout_marginStart="@dimen/x15"
+        android:layout_marginTop="@dimen/x15"
         android:background="@color/white"
         android:orientation="vertical">
 
@@ -25,34 +25,62 @@
                 android:layout_height="@dimen/x55"
                 android:src="@drawable/placeholder" />
 
-            <com.app.fandirect.ui.views.AnyTextView
-                android:id="@+id/txt_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/x15"
-                android:layout_toEndOf="@+id/iv_image"
-                android:text="Olivia Martins"
-                android:textColor="@color/app_dark_gray_2"
-                android:textSize="@dimen/x15"
-                app:typeface="@string/font_normal" />
-
-            <com.app.fandirect.ui.views.AnyTextView
-                android:id="@+id/txt_date"
+            <LinearLayout
+                android:id="@+id/ll_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/x15"
                 android:layout_toEndOf="@+id/iv_image"
-                android:gravity="end"
-                android:text="22-07-17"
-                android:textColor="@color/app_dark_gray"
-                android:textSize="@dimen/x12"
-                app:typeface="@string/font_normal" />
+                android:orientation="horizontal">
+
+                <com.app.fandirect.ui.views.AnyTextView
+                    android:id="@+id/txt_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/x15"
+                    android:layout_weight="0.6"
+                    android:text="Olivia Martins"
+                    android:textColor="@color/app_dark_gray_2"
+                    android:textSize="@dimen/x15"
+                    app:typeface="@string/font_normal" />
+
+                <com.app.fandirect.ui.views.AnyTextView
+                    android:id="@+id/txt_date"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_above="@+id/txt_address"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="@dimen/x7"
+                    android:layout_marginStart="15dp"
+                    android:layout_toEndOf="@+id/txt_name"
+                    android:layout_weight="0.3"
+                    android:gravity="end|center_vertical"
+                    android:text="22-07-17"
+                    android:textColor="@color/app_dark_gray"
+                    android:textSize="@dimen/x12"
+                    app:typeface="@string/font_normal" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/x20"
+                    android:layout_toEndOf="@+id/txt_date"
+                    android:layout_weight="0.1"
+                    android:gravity="end">
+
+                    <Button
+                        android:id="@+id/menu_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/menu2" />
+                </LinearLayout>
+
+            </LinearLayout>
+
 
             <com.app.fandirect.ui.views.AnyTextView
                 android:id="@+id/txt_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/txt_name"
+                android:layout_below="@+id/ll_name"
                 android:layout_marginStart="@dimen/x15"
                 android:layout_marginTop="@dimen/x7"
                 android:layout_toEndOf="@+id/iv_image"
@@ -83,54 +111,57 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginStart="@dimen/x15"
+            android:layout_marginBottom="@dimen/x15"
             android:layout_marginEnd="@dimen/x15"
-            android:layout_marginBottom="@dimen/x15">
+            android:layout_marginStart="@dimen/x15"
+            android:orientation="horizontal">
 
             <com.app.fandirect.ui.views.AnyTextView
                 android:id="@+id/like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/like3"
-
                 android:drawablePadding="@dimen/x5"
+                android:gravity="center_vertical"
+                android:drawableStart="@drawable/unselected_like"
                 android:textColor="@color/light_grey"
                 android:textSize="@dimen/x14"
-                app:typeface="@string/font_normal"/>
+                app:typeface="@string/font_normal" />
 
             <com.app.fandirect.ui.views.AnyTextView
                 android:id="@+id/comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/x12"
-                android:drawableStart="@drawable/comment3"
                 android:drawablePadding="@dimen/x5"
+                android:drawableStart="@drawable/unselected_comment"
                 android:textColor="@color/light_grey"
+                android:gravity="center_vertical"
                 android:textSize="@dimen/x14"
-                app:typeface="@string/font_normal"/>
+                app:typeface="@string/font_normal" />
 
             <com.app.fandirect.ui.views.AnyTextView
                 android:id="@+id/share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/x12"
-                android:drawableStart="@drawable/share3"
                 android:drawablePadding="@dimen/x5"
+                android:drawableStart="@drawable/unselected_share"
+                android:gravity="center_vertical"
                 android:textColor="@color/light_grey"
                 android:textSize="@dimen/x14"
-                app:typeface="@string/font_normal"/>
+                app:typeface="@string/font_normal" />
 
             <com.app.fandirect.ui.views.AnyTextView
                 android:id="@+id/favorite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/x12"
-                android:drawableStart="@drawable/fav3"
                 android:drawablePadding="@dimen/x5"
+                android:gravity="center_vertical"
+                android:drawableStart="@drawable/unselected_fav"
                 android:textColor="@color/light_grey"
                 android:textSize="@dimen/x14"
-                app:typeface="@string/font_normal"/>
+                app:typeface="@string/font_normal" />
 
         </LinearLayout>
 
