--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,12 +27,18 @@
         <item name="colorPrimary">@color/app_blue</item>
         <item name="android:windowNoTitle">true</item>
 
+        <item name="android:popupMenuStyle">@style/PopupMenu</item>
+
     </style>
 
 
     <style name="spinner_style">
         <item name="android:background">@drawable/spinner_dropdown</item>
 
+    </style>
+
+    <style name="PopupMenu" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:popupBackground">@android:color/white</item>
     </style>
 
 </resources>
